--- a/ForntEnd/hotel_management/src/app/booking/booking.component.css
+++ b/ForntEnd/hotel_management/src/app/booking/booking.component.css
@@ -10,13 +10,13 @@
 }
 
 .btn{
-    padding-top: 10px;
+    /* padding-top: 10px; */
     margin-top: 10px;
 }
 
 .box-form{
     width: 30%;
-    border-right: 1px solid white;
+    border-right: 1px rgb(63, 47, 206);
     margin-right: 5px;
 }
 .list-box{
@@ -25,3 +25,20 @@
 .box{
     display: flex;
 }
+
+th{
+    /* background-color: rgb(74, 71, 223); */
+    border-bottom: 1px solid #ddd;
+}
+
+
+.small-input {
+    width: 90px; /* Adjust the width according to your preference */
+  }
+label{
+    font-size: 12px;
+}
+input{
+    font-size: 12px;
+}
+  
