--- a/ForntEnd/hotel_management/src/app/booking/booking.component.html
+++ b/ForntEnd/hotel_management/src/app/booking/booking.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="box">
   <div class="box-form">
     <!-- booking-form.component.html -->
@@ -5,6 +6,7 @@
         <!-- <button class="btn btn-primary " routerLink="/booking-list">View Bookings</button> -->
     </div>
     &nbsp;
+    <div class="booking-div">
     <form (ngSubmit)="saveBooking()">
         <table>
             <tr>
@@ -34,20 +36,21 @@
                 <td><input type="number" class="form-control" id="numberOfGuest" name="numberOfGuest" [(ngModel)]="booking.numberOfGuest" required></td>
             </tr>
             <tr>
-                <td><label for="checkIn">Check-in Date:</label></td>
-                <td><input type="date" class="form-control" id="checkIn" name="checkIn" [(ngModel)]="booking.checkIn" required></td>
+                <td><label for="checkIn">Check-In Date:</label></td>
+                <input type="date" id="checkIn" name="checkIn" class="form-control" [min]="minDate" [max]="maxDate"  [(ngModel)]="booking.checkIn" required>
             </tr>
             <tr>
-                <td><label for="checkOut">Check-out Date:</label></td>
-                <td><input type="date" class="form-control" id="checkOut" name="checkOut" [(ngModel)]="booking.checkOut" required></td>
+                <td><label for="checkOut">Check-Out Date:</label></td>
+                <input type="date" id="checkOut" name="checkOut" class="form-control" [min]="minDate" [max]="maxDate"  [(ngModel)]="booking.checkOut" required>
             </tr>
             <tr>
                 <td colspan="2">
-                    <button type="submit" class="btn btn-primary">Book</button>
+                    <button type="submit" class="btn btn-primary btn-sm">Book</button>
                 </td>
             </tr>
         </table>
     </form>
+</div>
 </div>
 
 
@@ -55,7 +58,6 @@
 
   
 <div class="btn">
-  <!-- <button class="btn btn-primary " routerLink="/booking">New Booking</button> -->
 </div>
 <div>
   <table class="table">
@@ -65,8 +67,8 @@
               <th>Hotel Name</th>
               <th>Guest Name</th>
               <th>Number Of Guest</th>
-              <th>Check In Date</th>
-              <th>Check Out Date</th>
+              <th>Check-In Date</th>
+              <th>Check-Out Date</th>
               <th>Action</th>
           </tr>
       </thead>
@@ -89,16 +91,18 @@
               </tr>
               <ng-template #editRow>
                   <tr>
-                      <td><input type="text" [(ngModel)]="booking.bookingId" disabled ></td>
-                      <td><input type="text" [(ngModel)]="booking.hotelId" disabled></td>
-                      <td><input type="text" [(ngModel)]="booking.guestId" disabled></td>
-                      <td><input type="text" [(ngModel)]="booking.numberOfGuest"></td>
+                    <td><input type="text" [(ngModel)]="booking.bookingId" disabled class="small-input"></td>
+                    <td><input type="text" [(ngModel)]="booking.hotelId" disabled class="small-input"></td>
+                    <td><input type="text" [(ngModel)]="booking.guestId" disabled class="small-input"></td>
+                    <td><input type="text" [(ngModel)]="booking.numberOfGuest" class="small-input"></td>                    
                       <td><input type="date" [(ngModel)]="booking.checkIn"></td>
                       <td><input type="date" [(ngModel)]="booking.checkOut"></td>
                       <td>
-                          <button (click)="updateBooking(booking)" class="btn btn-primary btn-sm">Save</button>
+                          <!-- <button (click)="updateBooking(booking)" class="btn btn-primary btn-sm">Save</button> -->
+                          <i class="fa-solid fa-floppy-disk" (click)="updateBooking(booking)"></i>
                           &nbsp;
-                          <button (click)="cancelEdit(booking)" class="btn btn-primary btn-sm">Cancel</button>
+                          <!-- <button (click)="cancelEdit(booking)" class="btn btn-primary btn-sm">Cancel</button> -->
+                          <i class="fa-solid fa-xmark" (click)="cancelEdit(booking)"></i>
                       </td>
                   </tr>
               </ng-template>
