--- a/ForntEnd/hotel_management/src/app/home/home.component.css
+++ b/ForntEnd/hotel_management/src/app/home/home.component.css
@@ -17,31 +17,11 @@
   }
   
   .home-container img {
-    max-width: 50%;
-    height: auto;
+    width: 100%; /* This ensures the image width covers the container width */
+    height: 100%; /* This ensures the image height covers the container height */
+    object-fit: cover; /* This ensures the image covers the container while maintaining its aspect ratio */
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  /* marquee.component.css */
-.marquee {
-  white-space: nowrap;
-  overflow: hidden;
-  position: relative;
-}
-
-.marquee p {
-  display: inline-block;
-  padding-left: 100%; /* Ensures the text starts offscreen */
-  animation: marquee 5s linear infinite; /* Change animation duration as needed */
-}
-
-@keyframes marquee {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
 }
 
   
