--- a/ForntEnd/hotel_management/src/app/home/home.component.html
+++ b/ForntEnd/hotel_management/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <app-navbar></app-navbar>
 <div class="home-container">
-    <h2>Welcome to our website!</h2>
-    <p>This is a sample home page content. You can replace it with your own content.</p>
+    <h2>Welcome !</h2>
     <img src="./assets/hotel_image.jpg" alt="Placeholder Image" class="img-fluid">
   </div>
   
