--- a/ForntEnd/hotel_management/src/app/hotel/hotel.component.html
+++ b/ForntEnd/hotel_management/src/app/hotel/hotel.component.html
@@ -1,10 +1,8 @@
-<p>hotel works!</p>
-
-<form [formGroup]="hotelForm" (ngSubmit)="onSubmit()">
-  <div>
+  <form [formGroup]="hotelForm" (ngSubmit)="onSubmit()">
+    <div class="search">
     <label>Hotel ID:</label>
     <input type="text" formControlName="hotelId">
-  </div>
+ </div>
   <div>
     <label>Name:</label>
     <input type="text" formControlName="name">
