--- a/ForntEnd/hotel_management/src/app/login/login.component.html
+++ b/ForntEnd/hotel_management/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="container col-4 login-container">
   <div class="login-box">
     <h2>Login</h2>
+    <!-- Display error message if it exists -->
+    <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
     <form (ngSubmit)="login()">
       <div>
         <label for="username"><i class="fa-solid fa-envelope"></i></label>
@@ -10,11 +12,14 @@
         <label for="password"><i class="fa-solid fa-key"></i></label>
         <input type="password" id="password" placeholder="Enter Your Password" class="form-control" name="password" [(ngModel)]="password" required>
         </div>
-        <div class="col-4">
-          <button type="submit" class="btn btn-primary btn-sm">Login</button>
-        </div>
-        <div>
-          <a  routerLink="/new-registration" > New Registration</a>
+        <div class="row justify-content-center"> <!-- Added 'row' and 'justify-content-center' classes -->
+          <div class="col-4"> <!-- Adjusted column width -->
+            <button type="submit" class="btn btn-primary btn-sm">SingIn</button>
+          </div>
+          <div class="col-4"> <!-- Adjusted column width -->
+            <!-- <a   > New Registration</a> -->
+            <button routerLink="/new-registration" class="btn btn-primary btn-sm">SingUp</button>
+          </div>
         </div>
       </form>
   </div>
