--- a/ForntEnd/hotel_management/src/app/new-registration/new-registration.component.html
+++ b/ForntEnd/hotel_management/src/app/new-registration/new-registration.component.html
@@ -4,27 +4,27 @@
     <div class="form-group">
       <label for="userName">Username:</label>
       <input type="text" formControlName="userName" class="form-control">
-      <div *ngIf="registerForm.get('userName')?.hasError('required') && registerForm.get('userName')?.touched">
+      <div *ngIf="registerForm.get('userName')?.hasError('required') && registerForm.get('userName')?.touched" class="error-message">
         Username is required
       </div>
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" formControlName="email" class="form-control">
-      <div *ngIf="registerForm.get('email')?.hasError('required') && registerForm.get('email')?.touched">
+      <div *ngIf="registerForm.get('email')?.hasError('required') && registerForm.get('email')?.touched" class="error-message">
         Email is required
       </div>
-      <div *ngIf="registerForm.get('email')?.hasError('email') && registerForm.get('email')?.touched">
+      <div *ngIf="registerForm.get('email')?.hasError('email') && registerForm.get('email')?.touched" class="error-message">
         Invalid email format
       </div>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
       <input type="password" formControlName="password" class="form-control">
-      <div *ngIf="registerForm.get('password')?.hasError('required') && registerForm.get('password')?.touched">
+      <div *ngIf="registerForm.get('password')?.hasError('required') && registerForm.get('password')?.touched" class="error-message">
         Password is required
       </div>
-      <div *ngIf="registerForm.get('password')?.hasError('minlength') && registerForm.get('password')?.touched">
+      <div *ngIf="registerForm.get('password')?.hasError('minlength') && registerForm.get('password')?.touched" class="error-message">
         Password should be at least 6 characters
       </div>
     </div>
@@ -34,7 +34,7 @@
         <option value="ROLE_USER">User</option>
         <option value="ROLE_ADMIN">Admin</option>
       </select>
-      <div *ngIf="registerForm.get('role')?.hasError('required') && registerForm.get('role')?.touched">
+      <div *ngIf="registerForm.get('role')?.hasError('required') && registerForm.get('role')?.touched" class="error-message">
         Role is required
       </div>
     </div>
@@ -42,5 +42,7 @@
       {{ errorMessage }}
     </div>
     <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Register</button>
+  &nbsp;
+    <button  class="btn-danger" routerLink="/login">Cancel</button>
   </form>
 </div>
