--- a/ForntEnd/hotel_management/src/app/review/review.component.css
+++ b/ForntEnd/hotel_management/src/app/review/review.component.css
@@ -5,20 +5,25 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
+    
   }
   
+  .table-div{
+    padding-top: 30px;
+  }
   /* Style table headers */
   th {
-    background-color: #f2f2f2;
     padding: 8px;
     text-align: left;
-    
+    /* background-color: rgb(132, 130, 245); */
+    color: #fff;
   }
   
   /* Style table cells */
   td {
     border-bottom: 1px solid #ddd;
     padding: 8px;
+    /* background-color: rgb(200, 198, 248); */
   }
   
   /* Style alternate rows */
