--- a/ForntEnd/hotel_management/src/styles.css
+++ b/ForntEnd/hotel_management/src/styles.css
@@ -6,3 +6,9 @@
     font-size: 12px;
 
 }
+
+body {
+    background-color: #bcd5e7; /* Change the color value to your desired background color */
+  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
